--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
              (See the file "res/values/google_maps_api.xml").
              Note that the API key is linked to the encryption key used to sign the APK.
              You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
+             sign the APK for publishing.android:theme="@style/Theme.AppCompat.DayNight"
              You can define the keys for the debug and release targets in src/debug/ and src/release/.
         -->
         <meta-data
@@ -41,6 +41,7 @@
 
         <activity
             android:name=".MapsActivity"
+            android:theme="@style/Theme.AppCompat.DayNight"
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".MainActivity"
